# updater

./: Cargo.toml
.github/workflows/: build.yml
src/: hash.rs  main.rs  manifest.rs
