[package]
name = "ougon-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
base16ct = { version = "0.3.0", features = ["alloc"] }
bytes = "1.10.1"
iced = { git = "ssh://git@github.com/iced-rs/iced.git", version = "0.14.0-dev", features = ["image", "tokio"] }
octocrab = "0.47.0"
reqwest = "0.12.24"
sha2 = "0.10.9"
tempdir = "0.3.7"
thiserror = "2.0.17"
zip = "6.0.0"

[profile.dev.package.octocrab]
hint-mostly-unused = true

[profile.release.package.octocrab]
hint-mostly-unused = true